ENG-2283 #comment fix z-index react-color and error prop

--- a/src/assets/sass/components/_selectColor.scss
+++ b/src/assets/sass/components/_selectColor.scss
@@ -49,6 +49,7 @@
   .twitter-picker {
     position: absolute !important;
     right: 0;
+    z-index: 1;
   }
 
   &.error {
